--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "travel",
+  "name": "blogs-context",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -36,6 +36,8 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.2"
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7"
   }
 }
